# beat-partner-plugin

./: .gitignore  AGENTS_VST_PLUGIN.md  Cargo.toml  PROJECT_PLAN_VST_PLUGIN.md
migrations/: 001_initial_schema.sql
src/: editor.rs  error.rs  lib.rs  params.rs
src/audio/: mod.rs  ring_buffer.rs  spectrum.rs
src/models/: analysis.rs  lyrics.rs  mod.rs  project.rs  vocal.rs
src/services/: analysis_service.rs  db_service.rs  mod.rs
src/ui/: app.rs  mod.rs  settings.rs  theme.rs
src/ui/analyzer/: mod.rs  spectrum_panel.rs
src/ui/lyrics/: annotation_toolbar.rs  editor.rs  highlighted_text.rs  mod.rs
src/ui/theory/: chord_grid.rs  circle_of_fifths.rs  mod.rs  progression_suggestions.rs  scale_viewer.rs
src/ui/vocals/: chain_advisor.rs  checklist.rs  mod.rs  notes_editor.rs
src/ui/widgets/: glass_button.rs  glass_panel.rs  mod.rs  spectrum_view.rs
